[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto ={version = "0.1.0",path = "../proto"}
tokio = "1.35.1"
lazy_static = { version = "1.4.0", features = [] }
async-trait = { version = "0.1.77", features = [] }
tonic = { version = "0.10.2", features = [] }
