[package]
name = "chronod"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
api ={version = "0.1.0", path = "../api"}
proto ={version="0.1.0", path ="../proto"}
prost = { version = "0.12.3", features = [] }