[package]
name = "zchronod-logger"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }

