[package]
name = "proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-build = "0.10.2"
prost = "0.12.3"
tonic = "0.10.2"
serde = { version = "1.0.196", features = ["derive"] }
