[package]
name = "storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-kv = {version = "0.3.1", path = "../kv"}
tempfile = "3.9.0"
proto = {version = "0.1.0", path="../proto"}
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
log = { version = "0.4.20", features = [] }
hex = "0.4.3"