[package]
name = "network"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.10.2", features = [] }
async-trait = "0.1.77"
tonic-build = { version = "0.10.2", features = [] }
prost = "0.12.3"
time = "0.3.31"
futures = "0.3.30"
tokio = { version = "1.35.1", features = [] }
gossipd = { version = "0.1.0", path = "./gossipd" }
log = "0.4.20"
bytes = { version = "1.5.0", features = [] }
api = { version = "0.1.0", path = "../api" }
proto ={version = "0.1.0",path = "../proto"}
libp2p = { version = "0.52.4", features = [] }
chronod = { version = "0.1.0", path = "../chronod" }
storage = { version = "0.1.0", path = "../storage" }