[package]
name = "gossipd"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
futures = "0.3.29"
async-trait = "0.1"
libp2p = { version = "0.52.4", features = ["full"] }
tokio = { version = "1.33.0", features = ["full"] }

[lib]
name = "gossipd"
path = "src/lib.rs"

[[bin]]
name = "gossipd"
path = "src/bin/main.rs"
